--- a/Skill Development Projects/Responsive Web Design/recipes/styles.css
+++ b/Skill Development Projects/Responsive Web Design/recipes/styles.css
@@ -20,8 +20,8 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
-  max-width: 1400px;
-  margin: 20px 30px;
+  max-width: 2100px;
+  margin: 20px auto;
   padding: 20px 10px;
 }
 
@@ -30,25 +30,33 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   width: 100%;
-  max-width: 350px;
-  height: 300px;
+  max-width: 325px;
+  height: 275px;
   object-fit: cover;
   border-radius: 10px;
 }
 
 .card img {
-    width: 100%;
-    max-width: 350px;
-    height: 240px;
-    object-fit: cover;
-    border-radius: 10px 10px 0px 0px;
-  }
+  width: 100%;
+  max-width: 350px;
+  height: 220px;
+  object-fit: cover;
+  border-radius: 10px 10px 0px 0px;
+}
 
 .card:hover {
-    background-color: #f0f0f0;
+  background-color: #f0f0f0;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .container {
   padding: 2px 16px;
+  font-family: monospace;
+  text-align: center;
+  font-size: 16px;
+}
+
+a{
+  text-decoration: none;
+  color: #0a0a23;
 }
