--- a/Skill Development Projects/Responsive Web Design/recipes/styles.css
+++ b/Skill Development Projects/Responsive Web Design/recipes/styles.css
@@ -60,3 +60,16 @@ a{
   text-decoration: none;
   color: #0a0a23;
 }
+
+.banner {
+  background:#0a0a23;
+  width: 100%;
+  height: 200px;
+}
+
+.banner-img{
+  width: 100%;
+  max-width: 350px;
+  height: 200px;
+  object-fit: cover;
+}
