--- a/Skill Development Projects/Responsive Web Design/recipes/styles.css
+++ b/Skill Development Projects/Responsive Web Design/recipes/styles.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  font-family: monospace;
 }
 
 .header {
@@ -10,7 +11,6 @@
   background-color: #0a0a23;
   color: #fff;
   border-bottom: 4px solid #fdb347;
-  font-family: monospace;
 }
 
 .gallery {
@@ -51,7 +51,6 @@
 
 .container {
   padding: 2px 16px;
-  font-family: monospace;
   text-align: center;
   font-size: 16px;
 }
@@ -65,6 +64,20 @@ a{
   background:#0a0a23;
   width: 100%;
   height: 200px;
+  border-bottom: 4px solid #fdb347;
+  display: flex;
+}
+
+.text{
+  color: #e2e2e2;
+  margin: 0px 5px;
+  text-align: justify;
+  font-size: 1.5rem;
+}
+
+footer .text{
+  padding: 12.5px;
+  text-align: center;
 }
 
 .banner-img{
@@ -72,4 +85,12 @@ a{
   max-width: 350px;
   height: 200px;
   object-fit: cover;
+}
+
+footer{
+  position:fixed;
+  bottom:0;
+  width:100%;
+  height:50px;   /* Height of the footer */
+  background:rgb(43, 43, 43);
 }
