--- a/Skill Development Projects/Responsive Web Design/recipes/styles.css
+++ b/Skill Development Projects/Responsive Web Design/recipes/styles.css
@@ -69,10 +69,11 @@ a{
 }
 
 .text{
+  zoom: normal;
   color: #e2e2e2;
   margin: 0px 5px;
   text-align: justify;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 
 footer .text{
